# block-escape-solver

./: README.md  package-lock.json  pyproject.toml
block-escape-solver-ui/: package-lock.json  package.json
block-escape-solver-ui/app/solve/: SolutionBoard.tsx  page.tsx
src/: block.py  main.py  main_cli.py  samples.py  solver.py  util.py
src/block_escape_solver/: __init__.py
